# folio

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
folio/: db.py  main.py
folio/books/: args.py  books.py  models.py  schemas.py
folio/db/: db.py  query_builder.py
folio/models/: common.py  models.py  record.py
folio/repositories/: repository.py
folio/services/: builders.py  protocols.py  serializers.py  validators.py
folio/tests/: test_books.py  test_query_builder.py  test_utils.py
src/: db.py  main.py  models.py  test_utils.py  utils.py
src/books/: books.py  models.py
src/folio/: main.py  utils.py
src/folio/common/: __init__.py  exceptions.py  protocols.py  services.py  utils.py  validators.py
src/folio/models/: __init__.py  address.py  book.py  employment.py  models.py  record.py  travel.py  work.py
src/folio/repositories/: __init__.py  address_repo.py  base.py  book_repo.py  employment_repo.py  in_memory.py  repository.py  sqlite.py  travel_repo.py  work_repo.py
src/folio/services/: __init__.py  address_service.py  book_service.py  employment_service.py  protocols.py  serializers.py  travel_service.py  validators.py  work_service.py
src/tests/: test_utils.py
tests/: conftest.py  data.py  fake_repositories.py
tests/integration/: fake_repositories.py  test_address_service_integration.py  test_employment_service_integration.py  test_repository.py  test_travel_service_integration.py  test_work_service_integration.py
tests/unit/: test_record.py  test_serializers.py  test_work.py
(+18 files in other folders)
