[project]
name = "folio"
version = "0.1.0"
description = "A personal record keeper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.setuptools]
packages = ["folio"]
package-dir = {"" = "src"}


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
]

